syntax = "proto3";

package revisionrun;

option go_package = "github.com/stuttgart-things/stageTime-server";

import "revisionrun/response.proto";
import "revisionrun/revisionrun.proto";


service StageTimeApplicationService {
    rpc CreateRevisionRun(CreateRevisionRunRequest) returns (Response) {}
}
